collections/datacenter/networkpolicies/allow-to-prometheus-pushgateway.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-to-prometheus-pushgateway
spec:
  selector: b2.genesiscloud.dev/allow-to-prometheus-pushgateway == 'true'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        services:
          name: prometheus-pushgateway
          namespace: prometheus
